// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrailMapPoint should render loading skeleton 1`] = `
<DocumentFragment>
  <div
    class="styled__TrailMapPointContainer-sc-1t1auio-5 biTbvd"
  >
    <div
      class="styled__TrailMapPointSuspendContainer-sc-1t1auio-4 iPLrbd"
    >
      <div
        class="suspend"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rect skeleton MuiSkeleton-wave"
        />
      </div>
    </div>
    <div
      class="point"
    >
      20pt
    </div>
  </div>
</DocumentFragment>
`;

exports[`TrailMapPoint should render loading skeleton 2`] = `
<DocumentFragment>
  <div
    class="styled__TrailMapPointSuspendContainer-sc-1t1auio-4 iPLrbd"
  >
    <div
      class="suspend"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rect skeleton MuiSkeleton-wave"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TrailMapPoint should render loading skeleton when loading pointData 1`] = `
<DocumentFragment>
  <div
    class="styled__TrailMapPointSuspendContainer-sc-1t1auio-4 iPLrbd"
  >
    <div
      class="suspend"
    >
      <span
        class="MuiSkeleton-root MuiSkeleton-rect skeleton MuiSkeleton-wave"
      />
    </div>
  </div>
</DocumentFragment>
`;
